포스트 업데이트

--- a/story/_posts/2020-10-19-story-홍도.md
+++ b/story/_posts/2020-10-19-story-홍도.md
@@ -5,8 +5,8 @@ sitemap: false
 hide_last_modified: true
 ---
 
-**2017년 2월 홍도를 가다.**
 --
+2017년 2월 홍도를 가다.<br><br>
 시간이 허락되어 홍도를 찾았다.<br><br> 
 그것도 사람들 바글거리지 않는 설 지난 겨울 비수기 평일에 찾았다.<br><br>
 서울에서 목포까지는 KTX로 2시간40분, 목포항에서 홍도까지 쾌속선을 타고 가는 시간은 불과 2시간30분, 서울 한복판에서 홍도까지 도착하는데는 채 반나절도 안걸리는 셈이다.<br><br>
