이미지 업로드

--- a/story/_posts/2024-09-06-story-부엉이-바위-루트맵.md
+++ b/story/_posts/2024-09-06-story-부엉이-바위-루트맵.md
@@ -5,8 +5,6 @@ sitemap: false
 hide_last_modified: true
 --- 
 
----
 도봉산 부엉이 바위 루트맵 (Aid Climbing 용)
----
-<br>
-![부엉이바위루트맵](/mtngirl/assets/img/bueongirock.jpg)
+<br><br>
+![부엉이바위루트맵](/myblog/assets/img/부엉이바위루트맵.jpg)
