이미지 업로드2

--- a/story/_posts/2014-10-19-story-덕유산-산행기.md
+++ b/story/_posts/2014-10-19-story-덕유산-산행기.md
@@ -5,6 +5,8 @@ sitemap: false
 hide_last_modified: true
 --- 
 
+![덕유산산행기01](/myblog/assets/img/deogyusan/01.jfif)
+
 1. 산행종류 : 종주 워킹 산행
 
 2. 산행지   : 덕유산 (1610.6m) - 경남 함양, 전북 무주
@@ -64,3 +66,10 @@ hide_last_modified: true
 산은 내가 좋아하는 것들 중 덩치가 제일 크다. 덩치가 크면 싱겁다 했는데 덕유산은 속도 깊었다.
 
 덕유산 처럼 넓은 품을 가진 너라는 놈을 만나기 위해 나는 행복하게 또 일주일을 살 것이다.
+
+
+
+![덕유산산행기01](/myblog/assets/img/deogyusan/02.jfif)
+
+
+![덕유산산행기01](/myblog/assets/img/deogyusan/03.jfif)
