--- a/story/_posts/2008-08-30-story-야리.md
+++ b/story/_posts/2008-08-30-story-야리.md
@@ -5,6 +5,6 @@ sitemap: false
 hide_last_modified: true
 --- 
 
-**2008년 8월 일본 북알프스 야리를 가다**<br>
+2008년 8월 일본 북알프스 야리를 가다.<br>
 벌써 12년이 훌쩍 지난;;<br> 
-![일본북알프스야리01](/mtngirl/assets/img/road/01.jpg)
+![일본북알프스야리01](/myblog/assets/img/야리.jpg)
