--- a/books/파타고니아.md
+++ b/books/파타고니아.md
@@ -9,8 +9,11 @@ permalink: /books/
 
 ![파타고니아](/myblog/assets/img/books/파타고니아.jpg)  
 
-* [파타고니아 / 현암사 / 브루스 채트윈 / 김훈(역)]
-* [내용 발제 : 1-30장]
+--
+[파타고니아 / 현암사 / 브루스 채트윈 / 김훈(역)]
+[내용 발제 : 1-30장]
+--
+
 안데스산맥의 세레토레, 피치로이만 생각하고 이 책을 집어 들었다가 저자 채트윈 한테 뒤통수 한대 얻어 맞은 듯한 느낌이 든다. 브루스 채트윈의 [파타고니아]라는 이책은 단지 여행을 다녀와서 뭘했고 거긴 뭐가 있는데 멋지지 신기하지로만 쓰여진 일반 여행책자들과는 본질적으로 다르다. 확인 불가능 하지만 판타지적인 실화가 있고, 남아메리카 인디오들 및 칠로에섬 노동자들의 슬프고 격양된 이야기가 전개되며, 파타고니아로 도망친 유럽놈 미국놈들의 추악한 이야기와 러시아여성, 이란인, 일본놈들 이야기도 가끔 나오는데 채트윈 특유의 필치로 풀어가는게 아주 흥미롭다. 물론, 파타고니아의 자연, 동물, 건축물 그리고 그 마을의 전래 동화 같은 이야기도 나오긴 하지요. 검색해 보니 채트윈이 좋아하게 되었다는 과나코는 우리나라 동물원에서도 볼수 있다고 하는데 한번 가볼까 생각 중... 아, 그렇다고 채트윈이 좋다는 얘기는 절대 아님. 오해 없으시길...  
 
 1~30장 : 부에노스아레스 - 라플라타 - 바이아블랑카 - 파타고니아 사막 - 추부트 - 가이만 - 촐릴라 - 아로요페스카도 - 리오피코 까지  
