--- a/books/04-파타고니아.md
+++ b/books/04-파타고니아.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: 파타고니아2
+title: 파타고니아
 description: >
-  파타고니아2 (내용발제)
+  파타고니아 (내용발제)
 sitemap: false
 permalink: /books/
 ---
