--- a/books/읽은책정리.md
+++ b/books/읽은책정리.md
@@ -1,11 +1,41 @@
 ---
 layout: page
-title: 부러진 피켈 - 영원한 산악인 윤치원 평전
+title: 파타고니아, 부러진 피켈, 황금피켈
 description: >
-  부러진 피켈 (내용발제)
+  파타고니아 (내용발제)
 sitemap: false
 permalink: /books/
 ---
+
+![파타고니아](/myblog/assets/img/books/파타고니아.jpg)  
+
+--
+[파타고니아 / 현암사 / 브루스 채트윈 / 김훈(역)]
+[내용 발제 : 1-30장]
+--
+
+안데스산맥의 세레토레, 피치로이만 생각하고 이 책을 집어 들었다가 저자 채트윈 한테 뒤통수 한대 얻어 맞은 듯한 느낌이 든다. 브루스 채트윈의 [파타고니아]라는 이책은 단지 여행을 다녀와서 뭘했고 거긴 뭐가 있는데 멋지지 신기하지로만 쓰여진 일반 여행책자들과는 본질적으로 다르다. 확인 불가능 하지만 판타지적인 실화가 있고, 남아메리카 인디오들 및 칠로에섬 노동자들의 슬프고 격양된 이야기가 전개되며, 파타고니아로 도망친 유럽놈 미국놈들의 추악한 이야기와 러시아여성, 이란인, 일본놈들 이야기도 가끔 나오는데 채트윈 특유의 필치로 풀어가는게 아주 흥미롭다. 물론, 파타고니아의 자연, 동물, 건축물 그리고 그 마을의 전래 동화 같은 이야기도 나오긴 하지요. 검색해 보니 채트윈이 좋아하게 되었다는 과나코는 우리나라 동물원에서도 볼수 있다고 하는데 한번 가볼까 생각 중... 아, 그렇다고 채트윈이 좋다는 얘기는 절대 아님. 오해 없으시길...  
+
+1~30장 : 부에노스아레스 - 라플라타 - 바이아블랑카 - 파타고니아 사막 - 추부트 - 가이만 - 촐릴라 - 아로요페스카도 - 리오피코 까지  
+
+1장 : 남아메리카 파타고니아에 살고 있는 채트윈의 할머니의 사촌께서 할머니 결혼 선물로 밀라돈(나무늘보 처럼 생긴) 가죽이 있었는데 이게 채트윈이 파타고니아로 떠나게 해주는 이유가 된다. 그 가죽은 브론토사우루스(초식공룡) 가죽인 줄 알고 있었다. [나는 브론토사우루스가 대홍수 때 물에 빠져 죽었다고 배웠다. 노아가 방주에 실으려고 했지만 덩치가 너무 커서 그렇게 되었다나.], [브론토사우루스는 열대의 무더위를 통과하는 동안 다 썩어버려 런던에 도착했을 때는 곤죽이 되고 말았으니까. 오늘날 그 박물관에 뼈들만 전시되어 있는 건 바로 그 때문이다.]  
+
+2장 : 부에노스아이레스는 러시아와 닮았다고 함. 에바의 시신 이야기가 나옴.  
+
+3~4장 : 라플라타는 대학 도시. 자연사박물관 이야기 나옴(주로 공룡 얘기). 아르헨티나의 일부 학술 단체에서는 고생물학자 아메기노(동물학적 먼로주의 주장)를 플라톤,뉴턴과 같은 반열에 올려놓음. 빌 필립스(할아버지가 파타고니아 개척자)을 만나 세양조에 빠져 죽은 아이 이야기 나눔.  
+
+5~9장 : 바이아블랑카 도착. 스코틀랜드인의 집에 들림. 파타고니아 사막 이야기 조금 나옴. 아라우카존 인디오(사람을 산 채로 껍질을 벗기는)과 프랑스 귀족 이야기 나옴. 푸에르노마드린의 웨일스인. 푸에르노마드린은 생테쥐페리가 [야간비행]에서 폭풍을 만난 대목을 서술할때 등장한 지역이기도 함.  
+
+10~16장 : 추부트, 가이만(웨일스인이 살고 있는) 도착. 피아노 잘치는 소년 안셀모, 안셀모가 소개하는 시인 이야기 나옴.  
+
+17~19장 : 에푸옌에 도착하여 밀턴 에번스를 만나서 인디오와 싸워서 마을을 창건 했다는 얘기를 들음. 미국 텍사스 주 탐그린 카운티 출신의 모험가 마틴 세필드 이야기 나옴.  
+
+20~25장 : 촐릴라 도착. 미국 산적 이야기 나옴. 술취한 인디오 이야기 나옴. 아로요페스카도의 무법자 이야기 나옴.  
+
+26~29장 : 금광이 있고 독일인이 정착한 리오피코 도착. 무법자(미국인)와 싸우는 라모스 오테로 이야기 나옴. 오테로 덕분에 정부에서 무법자 소탕.  
+
+30장 : 러시아여성 이야기 나옴.
+
 
 ![부러진피켈](/myblog/assets/img/books/부러진피켈.jpg)  
 
@@ -60,3 +90,22 @@ permalink: /books/
 -. ‘눈물은 떨어져도 숟가락은 올라간다’는 속담처럼 언젠가는 잊게 될 것이다. 그러나 한 번씩 생각나는 것은 어쩔 수가 없다. 윤치원이 사라진 후 남은 것은 카고백 네 개에 들어 있는 장비가 전부였다. 쉽게 와서 쉽게 갔다… - 차영민
 
 -. 왜 이 같은 사고가 발생했을까? 가장 큰 문제는 통신 두절, 악천후, 판단력과 팀워크가 문제였던 것 같았다.
+
+![황금피켈](/myblog/assets/img/books/황금피켈.jpg)  
+
+저자는 본 책을 통해 '산과 삶과 죽음'이라는 화두를 소설로 환생 시켰다고 했다.
+
+소설속 주인공 형식은 K2 북벽을 세계 최초로 등정 하여 성공을 하고 귀국을 하게 된다. 공항 입국장 기자회견에서 본 책의 소재가 되고 있는 에베레스트 북동릉 등반도 언급하게 되는데 이때 형식은 황금으로 된 피켈을 들고 에베레스트로 등반하러 떠났다가 돌아오지 않는 두 젊은이 얘기를 통해 에베레스트 북동릉 등반을 오르겠다는 의지를 확고히 하고 있다.
+
+소설속 에베레스트는 에베레스트의 모든 루트가 등정됐고 오직 북동릉만이 남았다고 전개 된다.
+
+K2 등반시 눈사태로 사망한 장부 셰르파의 친동생인 까뮈와 함께 난공불락의 에베레스트 북동릉을 오르는 형식은 널린 시신들을 목격 하면서 패배감에 잡히지만 결국은 그 위험한 피너클지대를 매우 강한 의지로 벗어난다. 그러나, 영국원정대가 있는 노멀루트에 도달하기 전에 까뮈 셰르파는 죽고 마는데 형식은 엄청 괴로워 하게 된다.
+
+영국원정대 대장인 헌트는 이미 손가락, 발가락 동상이 심한 형식을 보고 내려 가라고 충고를 해되지만 형식은 정상을 향한다. 정상을 향하는 길에 다 죽어가는 이태리 대원을 보게 된다. 일단, 영국원정대에서 받은 자신의 산소통을 끼워 주고, 급히 정상을 찍고 다시 돌와 왔지만, 이미 이 이태리 대원은 거의 다 죽어 가고 있었다. 결국은 죽었다.
+
+금세기 최후의 보루였던 에베레스트 북동릉 등정에 성공한 형식은 탈진하여 죽어가는 이태리 대원을 방치한 채 등정한 비윤리적 등반으로 폄훼 되어 하루아침에 산악영웅에서 인간 말종으로 전락 한다.
+손가락과 발가락이 절단 되어 장애인이 됐고, 절친 광제가 다니는 아웃도어업체의 등산대리점을 했다가 쫄닥 망하고, 택시운전기사까지 하게 된다.
+
+형식의 택시를 탄 손님이 북경에서 터키까지 휠체어로 여행 한다는 것에 힘을 얻어 재기를 해볼려는데 간암말기 6개월 시한부 인생을 선고 받는다.
+
+항암치료로 피폐해진 몸을 이끌고 절친 광제와 함께 에베레스트 트레킹 길에 오른다. 형식은 그 에베레스트 북동릉을 보고, 절친 광제의 등짝에서 짧은 생을 마감 한다. 유골의 반은 인수봉에 뿌려지면서 형식의 붕어빵 아들 진호가 큰 산이 될것을 암시 하면서 소설은 끝을 맺는다.
